--- a/Server/src/API/appsettings.Development.json
+++ b/Server/src/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb; Initial Catalog=RTN_DB; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
