fix: my local connection str

--- a/Server/src/API/appsettings.Development.json
+++ b/Server/src/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb; Initial Catalog=RTN_DB; Trusted_Connection=True; TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=localhost; Initial Catalog=RTN_DB; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
