fix: appsettings sample

--- a/Server/src/API/appsettings.json
+++ b/Server/src/API/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=myServerName;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+    "DefaultConnection": "Server=myServerName;Database=myDataBase;User Id=myUsername;Password=myPassword;Encrypt=False;"
   }
 }
