--- a/Server/src/API/appsettings.json
+++ b/Server/src/API/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=myServerName;Database=myDataBase;User Id=myUsername;Password=myPassword;Encrypt=False;"
   }
