--- a/Server/src/API/appsettings.json
+++ b/Server/src/API/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "NotificationApiSettings": {
+    "BaseUrl": "http://localhost:3069"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=myServerName;Database=myDataBase;User Id=myUsername;Password=myPassword;Encrypt=False;"
   }
